Fix whitespace at bottom of the page

--- a/public/css/common.scss
+++ b/public/css/common.scss
@@ -560,6 +560,7 @@ nav {
 	padding: 10px 15px;
 	opacity: 1;
 	z-index: 1000 !important;
+	display: none;
 
 	.ui-datepicker-title {
 		text-align: center;
